feat(catalog): mark categories as tracked individually
